styles/global.css
*
{
    font-family: "Kanit", serif;
}

.navbar-nav
{
  color: var(--secondary-color);
}

.outfit-font
{
  font-family: "Outfit", serif;
}

.navbar-brand
{
    font-weight: 900;
}

.limit-height
{
  height: 40vh;
}

.img-cover
{
  width: 100%;
  object-fit: cover;
}

.banner
{
  object-fit: cover;
  height: 70vh;
  width: 100%;
}

.round-blur
{
  backdrop-filter: blur(5px);
  background-color: rgba(255,255,255,0.45);
  border-radius: 5px;
}

#success-icon
{
  font-size: 128px;
  color: var(--bs-teal);
  display: inline-block;
}

#timeout-bar
{
  -webkit-animation: 5s linear 0s fill-in;
  animation: 5s linear 0s fill-in;
}

@-webkit-keyframes fill-in {
  from {
    width: 0%;
  }
  to {
    width: 100%;
  }
}

@keyframes fill-in {
  from {
    width: 0%;
  }
  to {
    width: 100%;
  }
}

